# StockScout

./: .gitignore  README.md  StockScout-agent.md  pyproject.toml  stock_scout.py
.github/agents/: my-agent.agent.md
.github/copilot/agents/: StockScout-agent.md
.github/copilot/skills/: stock-screening.skill.md
config/: stocks.json  strategy.json
docs/: architecture.md
skills/: stock-screening.skill.md
src/stockscout/: __init__.py  agents.py  app.py  cli.py  models.py
src/stockscout/data_sources/: config_source.py
src/stockscout/ranking/: __init__.py  decision.py
src/stockscout/reports/: writer.py
src/stockscout/risk/: __init__.py  controller.py
src/stockscout/screeners/: __init__.py  basic.py
src/stockscout/strategies/: __init__.py  fundamental.py  technical.py
src/stockscout/utils/: config.py  files.py  math.py
tests/: test_app.py  test_stock_scout.py
