[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stockscout"
version = "0.1.0"
description = "Stock investment decision support toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GitHub Copilot" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
